# sts-win-prediction

./: .gitignore  README.md  Results Presentation.pptx  main.py  pyproject.toml
notebooks/: 1 - Transform Run-Level to Floor-Level.ipynb  2 - Card Handling.ipynb  3 - Exploratory Data Analytics.ipynb  4 - Modeling.ipynb
processing/: json_handlers.py
results/: Lightning Presentation.pptx
