[project]
name = "sts-win-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
